# pbos-dist

./: .gitmodules  CMakeLists.txt  configure  configure.ps1
cmake/: FindFreeSTDC.cmake  FindPbOSCommon.cmake
test/: CMakeLists.txt  bootimg.ps1  bootimg.sh
test/bootimg/: CMakeLists.txt  mkimg.ps1  mkimg.sh
test/bootimg/config/: 49_pbos  grub.cfg
test/bootimg/vm/: bochs.bat  bochs.sh  qemu-dbg.bat  qemu.bat  qemu.sh
test/bootimg/vm/bochs/: raw.bxrc  vhd.bxrc
